delete one
build delete one route and its depentecy files
